<resources>
    <string name="app_name">The Gadget Factorie</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gadget_factorie">Gadget Factorie</string>
    <string name="your_password">Your Password</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_email">Your Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="new_here_create_an_account">New Here Create An Account</string>
    <string name="login_to_account">Login to Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="customer_login">CUSTOMER LOGIN</string>
    <string name="admin_login">Admin Login</string>
    <string name="title_activity_admin_login">AdminLoginActivity</string>
    <string name="new_here_create_an_account_admin">New Here Create An Account Admin</string>
    <string name="admin_email">Admin Email</string>
    <string name="admin_password">Admin Password</string>
    <string name="choose_account_type">Choose Account Type</string>
    <string name="already_have_an_acount_admin">Already Have An Acount Admin?</string>
    <string name="already_have_an_account_admin">Already Have An Account Admin?</string>
    <string name="admin">Admin</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_password">Customer Password</string>
    <string name="customer">Customer</string>
    <string name="new_here_create_an_account_customer">New Here Create An Account Customer</string>
    <string name="new_here_already_have_an_account_customer">New Here Already Have An Account Customer</string>
    <string name="already_have_an_account_customer">Already Have An Account Customer?</string>
    <string name="customer_order_history">Customer Order History</string>
    <string name="stock_database">Stock Database</string>
</resources>